--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -811,7 +811,7 @@
                                     <action selector="saveClicked:" destination="1zm-Wi-V1Z" eventType="touchUpInside" id="CxS-OV-8fo"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="cat1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="RjW-5L-7pG">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RjW-5L-7pG">
                                 <rect key="frame" x="16" y="212" width="190" height="175"/>
                             </imageView>
                         </subviews>
@@ -1108,7 +1108,6 @@
     </scenes>
     <resources>
         <image name="cat.jpg" width="75" height="190"/>
-        <image name="cat1.jpg" width="587" height="680"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="uCZ-hd-2aZ"/>
